# project_lng_demand

./: README  manage.py  pyproject.toml
lng_prices/: apps.py
lng_volumes/: admin.py  apps.py  models.py  views.py
lng_volumes/migrations/: 0001_initial.py  0002_alter_country_name_alter_lngvolume_market_share_and_more.py
project_lng_demand/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  home.html
user_management/migrations/: 0001_initial.py
