[tool.poetry]
name = "project-lng-demand"
version = "0.1.0"
description = ""
authors = ["Rishi Latchmepersad <latchmepersad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
django = "~4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
