[tool.poetry]
name = "project-lng-demand"
version = "0.1.0"
description = ""
authors = ["Rishi Latchmepersad <latchmepersad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
django = "~4.2"
python-dotenv = "^1.0.1"
psycopg = "^3.2.2"
psycopg-binary = "^3.2.2"
django-htmx = "^1.19.0"
django-bootstrap5 = "^24.3"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
